--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -29,6 +28,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "axios-mock-adapter": "^2.1.0",
@@ -42,8 +42,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
+    "uuid": "^13.0.0",
     "vite": "^7.1.7",
     "vitest": "^3.2.4"
   }
