--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@uiw/codemirror-theme-basic": "^4.25.2",
+    "@uiw/react-codemirror": "^4.25.2",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "jwt-decode": "^4.0.0",
