Set up django channels and websocket connection on the editor for transmissing characters to all active users on a document

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework
 django-cors-headers
 python-dotenv
 psycopg2-binary
-channels
 djangorestframework-simplejwt
 jsonpickle
+'channels[daphne]'
+channels_redis
