--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.5",
     "@uiw/codemirror-theme-basic": "^4.25.2",
     "@uiw/react-codemirror": "^4.25.2",
     "axios": "^1.12.2",
